--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,4 +1,4 @@
-appname = financiera_mongo_crud
+appname = plan_cuentas_mongo_crud
 httpport = ${FINANCIERA_MONGO_CRUD_PORT}
 runmode = dev
 autorender = false
