Actualizando README.md y .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,19 @@ plan_cuentas_mongo_crud.exe
 plan_cuentas_mongo_crud.exe~
 lastupdate.tmp
 custom.env
+lastupdate.tmp
+.vscode/
+titan_api_crud
+main
+.scannerwork/
+swagger/*.png
+swagger/*.html
+swagger/*.js
+swagger/*.map
+swagger/*.css
+swagger/*.yml
+swagger/css/
+swagger/fonts/
+swagger/images/
+swagger/lang/
+swagger/lib/
