--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - FINANCIERA_MONGO_CRUD_DB_PASS=${FINANCIERA_MONGO_CRUD_DB_PASS}
       - FINANCIERA_MONGO_CRUD_DB_AUTH=${FINANCIERA_MONGO_CRUD_DB_AUTH}
       - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:${SERVICE_NAME}.localhost   
-    command: sh -c 'cd ${API_BASE_DIR}/${API_NAME};go get -v -u ./...; bee run'
+    command: sh -c 'cd ${API_BASE_DIR}/${API_NAME};go get -v -u ./...; bee run -downdoc=true -gendoc=true'
     depends_on: 
       - db
     networks: 
