--- a/.drone.yml
+++ b/.drone.yml
@@ -2,8 +2,8 @@ workspace:
   base: /go
   path: src/github.com/udistrital/${DRONE_REPO##udistrital/}
   when:
-    branch: [master, develop]
-
+    branch: [master, test]
+    
 pipeline:
 
   # build and test the go program
@@ -12,20 +12,8 @@ pipeline:
     commands:
      - go get -t
      - GOOS=linux GOARCH=amd64 go build -o main
-     
     when:
-      branch: [master, develop]
-      
-  # prepare imagedef.json and app.zip for deployment
-  sed:
-    image: alpine
-    commands:
-      - sed -i 's|SED_TAG|'${CI_COMMIT:0:7}'|' imagedef.json
-      - apk -U add zip
-      - zip app.zip imagedef.json
-      - zip ${DRONE_REPO##udistrital/}-${DRONE_BRANCH}.zip app.zip
-    when:
-      branch: [master, develop]
+      branch: [master, test]
             
   # build and push docker image to docker hub
   publish_dockerhub:
@@ -36,20 +24,35 @@ pipeline:
       - ${DRONE_COMMIT:0:7}
       - latest
     when:
-      branch: [master, develop]
+      branch: [master, test]
             
-  # upload app.zip to s3 bucket for CodePipline
-  publish_s3:
-    image: plugins/s3
+  # Update service ECS (Elastic Container Service) in AWS
+  go-awsecs:
+    image: golang:1.9
     secrets: [ aws_access_key_id, aws_secret_access_key ]
-    region: "us-east-1"
-    bucket: "drone-helper-bucket"
-    source: ${DRONE_REPO##udistrital/}-${DRONE_BRANCH}.zip   
-    target: /apps
+    commands:
+     - case ${DRONE_BRANCH} in
+          test) 
+            AMBIENTE=test 
+            CLUSTER=test
+            ;;
+          master) 
+            AMBIENTE=prod
+            CLUSTER=oas
+            ;;
+       esac
+     - AWS_REGION=us-east-1
+     - SERVICE=${DRONE_REPO##udistrital/}_$AMBIENTE
+     - MYCONTAINER=oas0/${DRONE_REPO##udistrital/}:${DRONE_COMMIT:0:7}
+     - container_name=${DRONE_REPO##udistrital/}
+     - go get -v -u -t github.com/udistrital/go-awsecs/cmd/update-aws-ecs-service
+     - AWS_ACCESS_KEY_ID=$${AWS_ACCESS_KEY_ID} AWS_SECRET_ACCESS_KEY=$${AWS_SECRET_ACCESS_KEY} AWS_REGION=$AWS_REGION
+       $GOPATH/bin/update-aws-ecs-service -cluster $CLUSTER -service $SERVICE -container-image $container_name=$MYCONTAINER
     when:
-      branch: [master, develop]
-      
-  #Notify results to telegram    
+      branch: [master, test]
+     
+  #Notify results to telegram
+  #telegram_token is the bot token and telegram_to is the group id that start with "-" character
   notify_telegram:
     image: appleboy/drone-telegram    
     secrets: [ telegram_token, telegram_to ]
@@ -64,4 +67,4 @@ pipeline:
       {{/success}}
     when:
       status: [success, failure]
-      branch: [master, develop]
+      branch: [master, test]
