--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ workspace:
   path: src/github.com/udistrital/${DRONE_REPO##udistrital/}
   when:
     branch: [master, test]
-    
+
 pipeline:
 
   # build and test the go program
@@ -14,7 +14,7 @@ pipeline:
      - GOOS=linux GOARCH=amd64 go build -o main
     when:
       branch: [master, test]
-            
+
   # build and push docker image to docker hub
   publish_dockerhub:
     image: plugins/docker
@@ -25,18 +25,18 @@ pipeline:
       - latest
     when:
       branch: [master, test]
-            
+
   # Update service ECS (Elastic Container Service) in AWS
   go-awsecs:
     image: golang:1.9
     secrets: [ aws_access_key_id, aws_secret_access_key ]
     commands:
      - case ${DRONE_BRANCH} in
-          test) 
-            AMBIENTE=test 
+          test)
+            AMBIENTE=test
             CLUSTER=test
             ;;
-          master) 
+          master)
             AMBIENTE=prod
             CLUSTER=oas
             ;;
@@ -50,21 +50,27 @@ pipeline:
        $GOPATH/bin/update-aws-ecs-service -cluster $CLUSTER -service $SERVICE -container-image $container_name=$MYCONTAINER
     when:
       branch: [master, test]
-     
-  #Notify results to telegram
-  #telegram_token is the bot token and telegram_to is the group id that start with "-" character
-  notify_telegram:
-    image: appleboy/drone-telegram    
-    secrets: [ telegram_token, telegram_to ]
+
+  Notify_telegram:
+    image: appleboy/drone-telegram
+    settings:
+      token:
+        from_secret: telegram_token
+      to:
+        from_secret: telegram_to
     format: html
     message: >
-      {{#success build.status}}
-        <code>{{repo.owner}}/{{repo.name}}</code> <a href="{{build.link}}">SUCCESS</a> 
-        <code>{{commit.branch}}</code>@<a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
-      {{else}}
-        <code>{{repo.owner}}/{{repo.name}}</code> <a href="{{build.link}}">FAILURE</a>
-        <code>{{commit.branch}}</code>@<a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
-      {{/success}}
+      {{#success build.status}} With Drone 1.0
+          <code>{{repo.owner}}/{{repo.name}}</code> <a href="{{build.link}}">SUCCESS</a>
+          <code>{{commit.branch}}</code>@<a href="{{commit.link}}">{{truncate commit.sha 7}}</a><code> By:{{commit.author}}</code>
+        {{else}}
+          <code>{{repo.owner}}/{{repo.name}}</code> <a href="{{build.link}}">FAILURE</a>
+          <code>{{commit.branch}}</code>@<a href="{{commit.link}}">{{truncate commit.sha 7}}</a><code> By:{{commit.author}}</code>
+        {{/success}}
     when:
-      status: [success, failure]
-      branch: [master, test]
+      branch:
+      - master
+      - test
+      status:
+      - failure
+      - success
