Quito el drone 1.0 de la notificación de telegram

--- a/.drone.yml
+++ b/.drone.yml
@@ -56,7 +56,7 @@ pipeline:
     secrets: [ telegram_token, telegram_to ]
     format: html
     message: >
-      {{#success build.status}} With Drone 1.0
+      {{#success build.status}}
           <code>{{repo.owner}}/{{repo.name}}</code> <a href="{{build.link}}">SUCCESS</a>
           <code>{{commit.branch}}</code>@<a href="{{commit.link}}">{{truncate commit.sha 7}}</a><code> By:{{commit.author}}</code>
         {{else}}
