--- a/.drone.yml
+++ b/.drone.yml
@@ -2,41 +2,55 @@ workspace:
   base: /go
   path: src/github.com/udistrital/${DRONE_REPO##udistrital/}
   when:
-    branch: [master, test]
+      branch:
+      - master
+      - test
+kind: pipeline
+name: API_deploy
 
-pipeline:
-
-  # build and test the go program
-  go:
+steps: 
+  - name: go
     image: golang:1.9
     commands:
      - go get -t
      - GOOS=linux GOARCH=amd64 go build -o main
     when:
-      branch: [master, test]
+      branch:
+      - master
+      - test
+      event:
+      - push
 
-  # build and push docker image to docker hub
-  publish_dockerhub:
+  - name: publish_dockerhub  
     image: plugins/docker
-    repo: oas0/${DRONE_REPO##udistrital/}
-    secrets: [ docker_username, docker_password ]
-    tag:
-      - ${DRONE_COMMIT:0:7}
-      - latest
+    settings:
+      username:
+        from_secret: DOCKER_USERNAME
+      password:
+        from_secret: DOCKER_PASSWORD
+      repo: oas0/${DRONE_REPO##udistrital/}
+      tags:
+        - ${DRONE_COMMIT:0:7}
+        - latest
     when:
-      branch: [master, test]
-
-  # Update service ECS (Elastic Container Service) in AWS
-  go-awsecs:
+      branch:
+        - test
+        - master    
+  
+  - name: go-awsecs
     image: golang:1.9
-    secrets: [ aws_access_key_id, aws_secret_access_key ]
+    environment:
+      AWS_ACCESS_KEY_ID:
+        from_secret: AWS_ACCESS_KEY_ID
+      AWS_SECRET_ACCESS_KEY:
+        from_secret: AWS_SECRET_ACCESS_KEY      
     commands:
      - case ${DRONE_BRANCH} in
-          test)
-            AMBIENTE=test
+          test) 
+            AMBIENTE=test 
             CLUSTER=test
             ;;
-          master)
+          master) 
             AMBIENTE=prod
             CLUSTER=oas
             ;;
@@ -45,19 +59,30 @@ pipeline:
      - SERVICE=${DRONE_REPO##udistrital/}_$AMBIENTE
      - MYCONTAINER=oas0/${DRONE_REPO##udistrital/}:${DRONE_COMMIT:0:7}
      - container_name=${DRONE_REPO##udistrital/}
-     - go get -v -u -t github.com/udistrital/go-awsecs/cmd/update-aws-ecs-service
+     - apt-get update
+     - apt-get install unzip
+     - wget https://github.com/Autodesk/go-awsecs/releases/download/v1.1/update-aws-ecs-service-linux-amd64.zip
+     - unzip update-aws-ecs-service-linux-amd64.zip -d /go/bin
      - AWS_ACCESS_KEY_ID=$${AWS_ACCESS_KEY_ID} AWS_SECRET_ACCESS_KEY=$${AWS_SECRET_ACCESS_KEY} AWS_REGION=$AWS_REGION
-       $GOPATH/bin/update-aws-ecs-service -cluster $CLUSTER -service $SERVICE -container-image $container_name=$MYCONTAINER
+       $GOPATH/bin/update-aws-ecs-service -cluster $CLUSTER -service $SERVICE -container-image $container_name=$MYCONTAINER    
     when:
-      branch: [master, test]
-
-  Notify_telegram:
+      branch:
+      - test
+      - master
+      event:
+      - push  
+  
+  - name: NotifyTelegram
     image: appleboy/drone-telegram
-    secrets: [ telegram_token, telegram_to ]
-    format: html
-    message: >
-      {{#success build.status}}
-          <code>{{repo.owner}}/{{repo.name}}</code> <a href="{{build.link}}">SUCCESS</a>
+    settings:
+      token:
+        from_secret: telegram_token
+      to:
+        from_secret: telegram_to
+      format: html
+      message: >
+        {{#success build.status}}
+          <code>{{repo.owner}}/{{repo.name}}</code> <a href="{{build.link}}">SUCCESS</a> 
           <code>{{commit.branch}}</code>@<a href="{{commit.link}}">{{truncate commit.sha 7}}</a><code> By:{{commit.author}}</code>
         {{else}}
           <code>{{repo.owner}}/{{repo.name}}</code> <a href="{{build.link}}">FAILURE</a>
