fix: actualización imagen golan por error github.com/lib/pq  ./../lib/pq/notify.go:47:2: undefined: driver.Connector

--- a/.drone.yml
+++ b/.drone.yml
@@ -47,18 +47,18 @@ steps:
     event:
     - push
 
-# - name: go_build
-#   image: golang:1.9
-#   commands:
-#   - go get -t
-#   - GOOS=linux GOARCH=amd64 go build -o main
-#   when:
-#     branch:
-#     - develop
-#     - release/*
-#     - master
-#     event:
-#     - push
+- name: go_build
+  image: golang:1.14
+  commands:
+  - go get -t
+  - GOOS=linux GOARCH=amd64 go build -o main
+  when:
+    branch:
+    - develop
+    - release/*
+    - master
+    event:
+    - push
 
 - name: go_run_test
   image: golang:1.9
