--- a/.drone.yml
+++ b/.drone.yml
@@ -125,26 +125,26 @@ steps:
     AWS_SECRET_ACCESS_KEY:
       from_secret: AWS_SECRET_ACCESS_KEY
   commands:
-   - case ${DRONE_BRANCH} in
-        test)
-          AMBIENTE=test
-          CLUSTER=test
-          ;;
-        master)
-          AMBIENTE=prod
-          CLUSTER=oas
-          ;;
-     esac
-   - AWS_REGION=us-east-1
-   - SERVICE=${DRONE_REPO##udistrital/}_$AMBIENTE
-   - MYCONTAINER=oas0/${DRONE_REPO##udistrital/}:${DRONE_COMMIT:0:7}
-   - container_name=${DRONE_REPO##udistrital/}
-   - apt-get update
-   - apt-get install unzip
-   - wget https://github.com/Autodesk/go-awsecs/releases/download/v1.1/update-aws-ecs-service-linux-amd64.zip
-   - unzip update-aws-ecs-service-linux-amd64.zip -d /go/bin
-   - AWS_ACCESS_KEY_ID=$${AWS_ACCESS_KEY_ID} AWS_SECRET_ACCESS_KEY=$${AWS_SECRET_ACCESS_KEY} AWS_REGION=$AWS_REGION
-     $GOPATH/bin/update-aws-ecs-service -cluster $CLUSTER -service $SERVICE -container-image $container_name=$MYCONTAINER
+  - case ${DRONE_BRANCH} in
+       release/*)
+         AMBIENTE=test
+         CLUSTER=test
+         ;;
+       master)
+         AMBIENTE=prod
+         CLUSTER=oas
+         ;;
+    esac
+  - AWS_REGION=us-east-1
+  - SERVICE=${DRONE_REPO##udistrital/}_$AMBIENTE
+  - MYCONTAINER=oas0/${DRONE_REPO##udistrital/}:${DRONE_COMMIT:0:7}
+  - container_name=${DRONE_REPO##udistrital/}
+  - apt-get update
+  - apt-get install unzip
+  - wget https://github.com/Autodesk/go-awsecs/releases/download/v1.1/update-aws-ecs-service-linux-amd64.zip
+  - unzip update-aws-ecs-service-linux-amd64.zip -d /go/bin
+  - AWS_ACCESS_KEY_ID=$${AWS_ACCESS_KEY_ID} AWS_SECRET_ACCESS_KEY=$${AWS_SECRET_ACCESS_KEY} AWS_REGION=$AWS_REGION
+    $GOPATH/bin/update-aws-ecs-service -cluster $CLUSTER -service $SERVICE -container-image $container_name=$MYCONTAINER
   when:
     branch:
     - release/*
@@ -162,15 +162,19 @@ steps:
     format: html
     message: >
       {{#success build.status}}
-        ✅ <a href="{{build.link}}">SUCCESS</a> <b>Build #{{build.number}}</b> (type: <code>{{ build.event }}</code>)
-        <b>Repo:</b><code>{{repo.name}}</code> <b>Branch:</b><code>{{commit.branch}}</code>
-        <b>Commit:</b> <a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
-        <b>Autor:</b>{{commit.author}} <code>&#128526 </code>
+        ✅ <a href="{{build.link}}">SUCCESS</a> <b>Build #{{build.number}}</b>
+        <b>type: </b><code>{{ build.event }}</code>
+        <b>Repo: </b><code>{{repo.name}}</code>
+        <b>Branch: </b><code>{{commit.branch}}</code>
+        <b>Commit: </b><a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
+        <b>Autor: </b>{{commit.author}} <code>&#128526 </code>
       {{else}}
-        ❌ <a href="{{build.link}}">FAILURE</a> <b>Build #{{build.number}}</b> (type: <code>{{ build.event }}</code>)
-        <b>Repo:</b><code>{{repo.name}}</code> <b>Branch:</b> <code>{{commit.branch}}</code>
-        <b>Commit:</b> <a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
-        <b>Autor:</b>{{commit.author}} <code>&#128549 </code>
+        ❌ <a href="{{build.link}}">FAILURE</a> <b>Build #{{build.number}}</b>
+        <b>type: </b><code>{{ build.event }}</code>
+        <b>Repo: </b><code>{{repo.name}}</code>
+        <b>Branch: </b><code>{{commit.branch}}</code>
+        <b>Commit: </b><a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
+        <b>Autor: </b>{{commit.author}} <code>&#128549 </code>
       {{/success}}
   when:
     branch:
