fix:ajuste de docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - .env
     environment:
       - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:${SERVICE_NAME}.localhost   
-    command: sh -c 'cd ${API_BASE_DIR}/${API_NAME};go get -v -d -u ./...; bee run -downdoc=true -gendoc=true'
+    command: sh -c 'cd ${API_BASE_DIR}/${API_NAME};go get -v -d -u ./...; go mod init; bee run'
     depends_on: 
       - db
     networks: 
