devops; ajuste de go test

--- a/.drone.yml
+++ b/.drone.yml
@@ -65,12 +65,12 @@ steps:
   commands:
   - go get -t
   - go get github.com/smartystreets/goconvey/convey
-  - go get -u gopkg.in/alecthomas/gometalinter.v1
-  - gometalinter.v1 --install
+  - GO111MODULE=off go get -u gopkg.in/alecthomas/gometalinter.v1
+  - GO111MODULE=off gometalinter.v1 --install
   - go get github.com/axw/gocov/...
   - go get github.com/AlekSi/gocov-xml
   - go get -u github.com/jstemmer/go-junit-report
-  - gometalinter.v1 ./... --checkstyle | tee report.xml
+  - GO111MODULE=off gometalinter.v1 ./... --checkstyle | tee report.xml
   # - gocov test ./... | gocov-xml > coverage.xml
   # - go test -v ./... | go-junit-report > test.xml
   when:
