devops: exclude tags

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,11 @@ workspace:
 kind: pipeline
 name: oas_api_ci
 
+trigger:
+  event:
+    exclude:
+      - tag
+
 steps:
 - name: check_readme
   failure: ignore
