fix: only install dependencies in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - develop.env
     environment:
       - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:${SERVICE_NAME}.localhost
-    command: sh -c 'cd ${API_BASE_DIR}/${API_NAME};go get -v -d -u ./...; go mod init; bee run'
+    command: sh -c 'cd ${API_BASE_DIR}/${API_NAME};go get -v; bee run'
     depends_on:
       - db
     networks:
