--- a/.drone.yml
+++ b/.drone.yml
@@ -63,8 +63,10 @@ steps:
   when:
     branch:
     - develop
-    - release/*
+    - feature/*
+    - hotfix/*
     - master
+    - release/*
     event:
     - push
 
@@ -84,8 +86,10 @@ steps:
   when:
     branch:
     - develop
-    - release/*
+    - feature/*
+    - hotfix/*
     - master
+    - release/*
     event:
     - push
 
