management: .gitignore actualizado

--- a/.gitignore
+++ b/.gitignore
@@ -5,16 +5,13 @@
 api
 main
 plan_cuentas_mongo_crud
-titan_api_crud
 *.tmp
 *.log
 *.zip
 
 # Variables de entorno
 *.env
-!.env
-!template.env
-!develop.env
+!*template*.env
 
 # IDEs
 .vscode
