feat: runmode + mongo_port de env
udistrital/presupuesto_cliente#500

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,10 +1,11 @@
 appname = plan_cuentas_mongo_crud
 httpport = ${FINANCIERA_MONGO_CRUD_PORT}
-runmode = dev
+runmode = ${FINANCIERA_MONGO_CRUD_RUNMODE||prod}
 autorender = false
 copyrequestbody = true
 EnableDocs = true
 mongo_host = ${FINANCIERA_MONGO_CRUD_DB_URL}
+mongo_port = ${FINANCIERA_MONGO_CRUD_DB_PORT||27017}
 mongo_db = ${FINANCIERA_MONGO_CRUD_DB_NAME}
 mongo_user = ${FINANCIERA_MONGO_CRUD_DB_USER}
 mongo_pass = ${FINANCIERA_MONGO_CRUD_DB_PASS}
