--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,9 +4,11 @@ runmode = ${FINANCIERA_MONGO_CRUD_RUNMODE||prod}
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-mongo_host = ${FINANCIERA_MONGO_CRUD_DB_URL}
-mongo_port = ${FINANCIERA_MONGO_CRUD_DB_PORT||27017}
-mongo_db = ${FINANCIERA_MONGO_CRUD_DB_NAME}
-mongo_user = ${FINANCIERA_MONGO_CRUD_DB_USER}
-mongo_pass = ${FINANCIERA_MONGO_CRUD_DB_PASS}
-mongo_db_auth = ${FINANCIERA_MONGO_CRUD_DB_AUTH}
+
+[mongo]
+host = ${FINANCIERA_MONGO_CRUD_DB_URL}
+port = ${FINANCIERA_MONGO_CRUD_DB_PORT||27017}
+db = ${FINANCIERA_MONGO_CRUD_DB_NAME}
+user = ${FINANCIERA_MONGO_CRUD_DB_USER}
+pass = ${FINANCIERA_MONGO_CRUD_DB_PASS}
+auth = ${FINANCIERA_MONGO_CRUD_DB_AUTH}
